--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/node": "^14.14.25",
+    "canvas": "^2.6.1",
+    "copy-webpack-plugin": "^7.0.0",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "mysql2": "^2.2.5",
@@ -19,9 +21,11 @@
     "sequelize": "^6.5.0",
     "sequelize-typescript": "^2.0.0",
     "sqlite3": "^5.0.1",
+    "ts-loader": "^8.0.16",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
     "sequelize-cli": "^6.2.0"
   }
 }
