--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "target": "ES2016",
     "outDir": "build",
     "rootDir": "src",
+    "sourceMap": true,
     "resolveJsonModule": true
   },
   "exclude": [
